src/objects/CustomObject25__c.object
<CustomObject>
    <fields>
        <fullName>DeviseSerialNumber__c</fullName>
        <label>设备序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>型号</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>新建发货产品</relationshipLabel>
        <relationshipName>xxjy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingRequestForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>发货申请单</label>
        <referenceTo>ShippingRequistion__c</referenceTo>
        <relationshipLabel>新建发货产品</relationshipLabel>
        <relationshipName>XUm</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>新建发货产品</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>新建发货申请名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>新建发货产品</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>